add react table

--- a/client/src/assets/styles/general.scss
+++ b/client/src/assets/styles/general.scss
@@ -5,9 +5,7 @@ html {
 }
 
 body {
-    display: flex;
-    height: 100%;
-    width: 100%;
+    margin: 0;
     font: 2em 'Raleway-Black', serif;
     color: $primary-color;
     overflow: hidden;
