--- a/client/src/app/modules/header/styles.scss
+++ b/client/src/app/modules/header/styles.scss
@@ -1,5 +1,9 @@
 .header {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    margin-bottom: 30px;
     &__content {
-        justify-content: center;
+        letter-spacing: 1px;
     }
 }
