delete unused fonts; add general project styling

--- a/client/src/assets/styles/import.scss
+++ b/client/src/assets/styles/import.scss
@@ -1,1 +1,8 @@
+@import 'colors';
 @import 'general';
+@import 'elements/button';
+@import 'elements/input';
+@import 'components/header';
+@import 'components/pair';
+
+@import url('https://fonts.googleapis.com/css?family=Lato:300');
