--- a/client/src/assets/styles/general.scss
+++ b/client/src/assets/styles/general.scss
@@ -1,12 +1,20 @@
 $primary-color: #333;
 
+* {
+  box-sizing: border-box;
+}
+
 html {
     height: 100%;
 }
 
 body {
     margin: 0;
-    font: 2em 'Raleway-Black', serif;
+    font-family: 'Lato', sans-serif;
     color: $primary-color;
     overflow: hidden;
+}
+
+ul {
+    list-style-type: none;
 }
