change input and buttons height

--- a/client/src/assets/styles/elements/button.scss
+++ b/client/src/assets/styles/elements/button.scss
@@ -10,6 +10,7 @@ button {
     text-transform: uppercase;
     text-align: center;
     width: 400px;
+    height: 38px;
     -webkit-transition: all 0.30s ease-in-out;
     -moz-transition: all 0.30s ease-in-out;
     -ms-transition: all 0.30s ease-in-out;
