--- a/client/src/assets/styles/import.scss
+++ b/client/src/assets/styles/import.scss
@@ -2,6 +2,7 @@
 @import 'general';
 @import 'elements/button';
 @import 'elements/input';
+@import 'elements/table';
 @import 'components/header';
 @import 'components/pair';
 
