--- a/client/src/assets/styles/elements/button.scss
+++ b/client/src/assets/styles/elements/button.scss
@@ -9,7 +9,7 @@ button {
     padding: 10px 10px;
     text-transform: uppercase;
     text-align: center;
-    width: 400px;
+    min-width: 150px;
     height: 38px;
     -webkit-transition: all 0.30s ease-in-out;
     -moz-transition: all 0.30s ease-in-out;
