--- a/client/src/assets/styles/components/pair.scss
+++ b/client/src/assets/styles/components/pair.scss
@@ -1,7 +1,7 @@
 .pair-page {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     text-align: center;
 
     &__section {
@@ -13,7 +13,6 @@
 
 .create-pair {
     display: flex;
-    justify-content: center;
     flex-direction: column;
     align-items: center;
 
@@ -24,7 +23,5 @@
 
     &__inputs-group {
         display: flex;
-        flex-direction: row;
-        justify-content: center;
     }
 }
