--- a/client/src/assets/styles/import.scss
+++ b/client/src/assets/styles/import.scss
@@ -3,7 +3,9 @@
 @import 'elements/button';
 @import 'elements/input';
 @import 'elements/table';
+@import 'elements/link';
 @import 'components/header';
+@import 'components/navbar';
 @import 'components/pair';
 
 @import url('https://fonts.googleapis.com/css?family=Lato:300');
