--- a/client/src/assets/styles/import.scss
+++ b/client/src/assets/styles/import.scss
@@ -7,5 +7,6 @@
 @import 'components/header';
 @import 'components/navbar';
 @import 'components/pair';
+@import 'components/test';
 
 @import url('https://fonts.googleapis.com/css?family=Lato:300');
