--- a/client/src/assets/styles/components/test.scss
+++ b/client/src/assets/styles/components/test.scss
@@ -5,12 +5,19 @@
     font-size: 20px;
 
     &__work-section {
-        margin-top: 40px;
+        display: flex;
+        align-items: center;
     }
-
     &__progress-bar {
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-top: 20px;
+    }
+
+    &__answers {
+        margin-top: 20px;
+        text-align: center;
+        font-size: 20px;
     }
 }
