Use redux store for fetching pairs and categories

--- a/client/src/assets/styles/import.scss
+++ b/client/src/assets/styles/import.scss
@@ -4,6 +4,7 @@
 @import 'elements/input';
 @import 'elements/table';
 @import 'elements/link';
+@import 'elements/select';
 @import 'components/header';
 @import 'components/navbar';
 @import 'components/pair';
