--- a/client/src/assets/styles/components/pair.scss
+++ b/client/src/assets/styles/components/pair.scss
@@ -5,6 +5,9 @@
     text-align: center;
 
     &__section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         width: 30%;
         justify-content: center;
         font-size: 20px;
