--- a/client/src/assets/styles/components/header.scss
+++ b/client/src/assets/styles/components/header.scss
@@ -4,7 +4,6 @@
     flex-direction: column;
     padding-top: 30px;
     padding-bottom: 30px;
-    font-family: 'Lato', Calibri, Arial, sans-serif;
     font-weight: 300;
     font-size: 20px;
     color: #89867e;
@@ -16,5 +15,20 @@
     &__content_small {
         letter-spacing: 1px;
         font-size: 1em;
+    }
+}
+
+.global-category {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-bottom: 1px solid $grey-light;
+    margin: 10px 0 30px;
+    padding-bottom: 20px;
+
+    &__title {
+        font-weight: 400;
+        font-size: 20px;
+        margin-right: 10px;
     }
 }
