Fix layout for middle/small devices

--- a/client/src/assets/styles/components/category.scss
+++ b/client/src/assets/styles/components/category.scss
@@ -1,4 +1,4 @@
-.pair-page {
+.category-page {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -15,7 +15,7 @@
     }
 }
 
-.create-pair {
+.create-category {
     display: flex;
     flex-direction: row;
     align-items: baseline;
