--- a/client/src/assets/styles/import.scss
+++ b/client/src/assets/styles/import.scss
@@ -8,6 +8,7 @@
 @import 'components/header';
 @import 'components/navbar';
 @import 'components/pair';
+@import 'components/category';
 @import 'components/test';
 
 @import url('https://fonts.googleapis.com/css?family=Lato:300');
