add loading spinner

--- a/client/src/assets/styles/import.scss
+++ b/client/src/assets/styles/import.scss
@@ -10,5 +10,6 @@
 @import 'components/pair';
 @import 'components/category';
 @import 'components/test';
+@import 'components/loader';
 
 @import url('https://fonts.googleapis.com/css?family=Lato:300');
