Fix app behavior with empty activeCategoryId in state

--- a/client/src/assets/styles/import.scss
+++ b/client/src/assets/styles/import.scss
@@ -9,6 +9,7 @@
 @import 'components/navbar';
 @import 'components/pair';
 @import 'components/category';
+@import 'components/no-category';
 @import 'components/test';
 @import 'components/loader';
 
