Disable buttons on empty inputs

--- a/client/src/assets/styles/colors.scss
+++ b/client/src/assets/styles/colors.scss
@@ -5,6 +5,7 @@ $yelow: #FBC02D;
 $white: #fff;
 $grey: #BDBDBD;
 $grey-light: rgb(222, 222, 222);
+$grey-super-light: #e5e3e3;
 $grey-dark: #757575;
 $red: #F44336;
 $green: #8BC34A;
