add layout for nav

--- a/client/src/assets/styles/colors.scss
+++ b/client/src/assets/styles/colors.scss
@@ -2,6 +2,7 @@ $input-color: #555556;
 $primary-blue: #1976D2;
 $blue: #03A9F4;
 $yelow: #FBC02D;
+$brown-md: #795548;
 $white: #fff;
 $grey: #BDBDBD;
 $grey-light: rgb(222, 222, 222);
