--- a/client/src/assets/styles/components/header.scss
+++ b/client/src/assets/styles/components/header.scss
@@ -6,7 +6,7 @@
     padding-bottom: 30px;
     font-weight: 300;
     font-size: 20px;
-    color: #89867e;
+    color: $brown-md;
 
     &__content_big {
         letter-spacing: 1px;
