--- a/client/src/assets/styles/import.scss
+++ b/client/src/assets/styles/import.scss
@@ -9,7 +9,7 @@
 @import 'components/navbar';
 @import 'components/pair';
 @import 'components/category';
-@import 'components/no-category';
+@import 'components/no-data';
 @import 'components/test';
 @import 'components/loader';
 
