--- a/client/src/assets/styles/colors.scss
+++ b/client/src/assets/styles/colors.scss
@@ -1,12 +1,7 @@
-$input-color: #555556;
-$primary-blue: #1976D2;
-$blue: #03A9F4;
-$yelow: #FBC02D;
-$brown-md: #795548;
+$light-green: #61892F;
+$green: #86C232;
+$black: #222629;
+$grey: #474B4F;
 $white: #fff;
-$grey: #BDBDBD;
-$grey-light: rgb(222, 222, 222);
-$grey-super-light: #e5e3e3;
-$grey-dark: #757575;
 $red: #F44336;
-$green: #8BC34A;
+$grey-light: 6B6E70;
