--- a/client/src/assets/styles/elements/table.scss
+++ b/client/src/assets/styles/elements/table.scss
@@ -1,5 +1,4 @@
 table {
-    border: 1px solid $grey;
     border-collapse: collapse;
 }
 
@@ -8,4 +7,5 @@ td,th {
     height: 38px;
     border: 1px solid $grey;
     font-weight: 500;
+    border-width: 0px 0px 1px 0px;
 }
