--- a/client/src/assets/styles/components/header.scss
+++ b/client/src/assets/styles/components/header.scss
@@ -6,7 +6,7 @@
     padding-bottom: 30px;
     font-weight: 300;
     font-size: 20px;
-    color: $brown-md;
+    color: $white;
 
     &__content_big {
         letter-spacing: 1px;
@@ -22,7 +22,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    border-bottom: 1px solid $grey-light;
     margin: 10px 0 30px;
     padding-bottom: 20px;
 
