--- a/client/src/assets/styles/import.scss
+++ b/client/src/assets/styles/import.scss
@@ -14,3 +14,4 @@
 @import 'components/loader';
 
 @import url('https://fonts.googleapis.com/css?family=Lato:300');
+@import url('https://fonts.googleapis.com/css?family=Oxygen');
