--- a/client/src/assets/styles/import.scss
+++ b/client/src/assets/styles/import.scss
@@ -12,6 +12,7 @@
 @import 'components/no-data';
 @import 'components/test';
 @import 'components/loader';
+@import '../../app/components/checkbox/style';
 
 @import url('https://fonts.googleapis.com/css?family=Lato:300');
 @import url('https://fonts.googleapis.com/css?family=Oxygen');
