--- a/client/src/assets/styles/components/pair.scss
+++ b/client/src/assets/styles/components/pair.scss
@@ -36,3 +36,21 @@
         align-items: center;
     }
 }
+
+.pair-listing {
+    table-layout: fixed;
+    width: 100%;
+}
+
+.pair-listing th:nth-child(1) {
+    width: 10%;
+}
+
+.pair-listing th:nth-child(2),
+.pair-listing th:nth-child(3) {
+    width: 40%;
+}
+
+.pair-listing th:nth-child(4) {
+    width: 10%;
+}
