--- a/client/src/assets/styles/elements/table.scss
+++ b/client/src/assets/styles/elements/table.scss
@@ -1,8 +1,8 @@
-table {
+table.tbl {
     border-collapse: collapse;
 }
 
-td,th {
+.tbl td,th {
     min-width: 300px;
     height: 38px;
     border: 1px solid $grey;
