--- a/client/src/app/components/checkbox/style.scss
+++ b/client/src/app/components/checkbox/style.scss
@@ -14,9 +14,18 @@ input[type="checkbox"] + label span{
     background-color: $green;
     cursor: pointer;
     background: url(../../app/components/checkbox/checked.svg) -30px top no-repeat;
+    transition: border .2s ease-in-out;
 }
 
 
 input[type="checkbox"]:checked + label span {
     background:url(../../app/components/checkbox/checked.svg) left top no-repeat;
+}
+
+input[type="checkbox"] + label span:hover {
+    border: 1px solid $light-green;
+}
+
+.outlined {
+    border: 1px solid $light-green !important;
 }
