--- a/client/src/assets/styles/components/pair.scss
+++ b/client/src/assets/styles/components/pair.scss
@@ -4,12 +4,12 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    max-width: 600px;
 
     &__section {
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 20%;
         justify-content: center;
         font-size: 16px;
     }
@@ -39,7 +39,6 @@
 
 .pair-listing {
     table-layout: fixed;
-    width: 100%;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -48,16 +47,18 @@
 }
 
 .pair-listing th:nth-child(1) {
-    width: 10%;
+    min-width: 20px;
+    max-width: 20px;
 }
 
 .pair-listing th:nth-child(2),
 .pair-listing th:nth-child(3) {
-    width: 40%;
+    min-width: 200px;
+    max-width: 200px;
 }
 
 .pair-listing th:nth-child(4) {
-    width: 10%;
+    width: 20px;
 }
 
 .pair-listing tr.selected {
