--- a/client/src/assets/styles/components/test.scss
+++ b/client/src/assets/styles/components/test.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 16px;
+    font-size: 18px;
 
     &__work-section {
         display: flex;
@@ -22,4 +22,14 @@
         margin-top: 20px;
         text-align: center;
     }
+}
+
+.testing__answers th:nth-child(1),
+.testing__answers th:nth-child(2),
+.testing__answers th:nth-child(3) {
+    min-width: 200px;
+}
+
+.testing__answers th:nth-child(4) {
+    min-width: 100px;
 }
