--- a/client/src/assets/styles/elements/input.scss
+++ b/client/src/assets/styles/elements/input.scss
@@ -6,7 +6,7 @@ input.inpt {
     font-family: inherit;
     font-weight: 450;
     font-size: 18px;
-    width: 300px;
+    min-width: 100px;
     margin: 3px 3px;
     height: 38px;
     padding: 4px 4px 4px;
