--- a/client/src/assets/styles/components/pair.scss
+++ b/client/src/assets/styles/components/pair.scss
@@ -1,10 +1,13 @@
 .pair-page {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     text-align: center;
     max-width: 600px;
+    min-width: 200px;
+    border: 1px solid $grey;
+    margin-right: 10px;
+    padding: 4px 4px 4px 4px;
 
     &__section {
         display: flex;
