Temporary - add dnd

--- a/client/src/assets/styles/components/pair.scss
+++ b/client/src/assets/styles/components/pair.scss
@@ -40,7 +40,7 @@
     }
 }
 
-.pair-listing {
+.pair-listing .pair-item {
     table-layout: fixed;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
