Remove redux from tests

--- a/client/src/assets/styles/components/storage.scss
+++ b/client/src/assets/styles/components/storage.scss
@@ -40,7 +40,6 @@
 
 .category-widget:hover,
 .category-widget__active{
-    border: 2px solid $grey;
-    //background-color: rgba(97,137,47,0.6);
+    border: 2px solid $green;
     background-color: rgba(75,79,79,0.98);
 }
