Add ability to remove category

--- a/client/src/assets/styles/import.scss
+++ b/client/src/assets/styles/import.scss
@@ -10,6 +10,7 @@
 @import 'components/pair';
 @import 'components/test';
 @import 'components/storage';
+@import 'components/categories';
 @import 'components/loader';
 @import '../../app/components/checkbox/style';
 
