--- a/client/src/assets/styles/import.scss
+++ b/client/src/assets/styles/import.scss
@@ -16,3 +16,6 @@
 
 @import url('https://fonts.googleapis.com/css?family=Lato:300');
 @import url('https://fonts.googleapis.com/css?family=Oxygen');
+
+
+@import '~react-notifications/lib/notifications.css';
