--- a/client/src/assets/styles/components/categories.scss
+++ b/client/src/assets/styles/components/categories.scss
@@ -9,6 +9,10 @@
     &__add-category {
         border: 1px solid $grey;
     }
+
+    &__no-info {
+        text-align: center;
+    }
 }
 
 .category-widget {
