Move all styles to domain folders

--- a/client/src/assets/styles/general.scss
+++ b/client/src/assets/styles/general.scss
@@ -20,3 +20,18 @@ body {
 ul {
     list-style-type: none;
 }
+
+table.tbl {
+    border-collapse: collapse;
+}
+
+.tbl td,th {
+    border: 1px solid $grey;
+    font-weight: 500;
+    border-width: 0px 0px 1px 0px;
+}
+
+a.nav-link {
+    color: inherit;
+    text-decoration: none;
+}
