--- a/client/src/app/components/checkbox/style.scss
+++ b/client/src/app/components/checkbox/style.scss
@@ -1,4 +1,3 @@
-
 input[type="checkbox"] {
     visibility: hidden;
 }
@@ -13,13 +12,13 @@ input[type="checkbox"] + label span{
     padding: 2px 2px 2px 2px;
     background-color: $green;
     cursor: pointer;
-    background: url(../../app/components/checkbox/checked.svg) -30px top no-repeat;
+    background: url(./checked.svg) -30px top no-repeat;
     transition: border .2s ease-in-out;
 }
 
 
 input[type="checkbox"]:checked + label span {
-    background:url(../../app/components/checkbox/checked.svg) left top no-repeat;
+    background:url(./checked.svg) left top no-repeat;
 }
 
 input[type="checkbox"] + label span:hover {
