--- a/client/src/app/components/button/style.scss
+++ b/client/src/app/components/button/style.scss
@@ -16,6 +16,10 @@ button.btn {
     -moz-transition: all 0.30s ease-in-out;
     -ms-transition: all 0.30s ease-in-out;
     -o-transition: all 0.30s ease-in-out;
+
+    &--full-width {
+        width: 100%;
+    }
 }
 
 button.btn.btn-primary {
