--- a/client/src/app/components/input/style.scss
+++ b/client/src/app/components/input/style.scss
@@ -14,6 +14,10 @@ input.inpt {
     -moz-transition: all 0.30s ease-in-out;
     -ms-transition: all 0.30s ease-in-out;
     -o-transition: all 0.30s ease-in-out;
+
+    &--full-width {
+        width: 100%;
+    }
 }
 
 input.inpt:focus,input.inpt:hover {
